Fix loading bar on Firefox.

--- a/main/src/pc/page/index.styl
+++ b/main/src/pc/page/index.styl
@@ -170,6 +170,7 @@ canvas#main
     width 400px
     height 400px
     left 0
+    top 0
 
 @import 'includes/top'
 
